Checking deployed state

--- a/index.html
+++ b/index.html
@@ -4,13 +4,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vipul Gupta | Full-Stack Web Developer</title>
+    <title>Vipul Gupta | Front-end Web Developer</title>
     <link rel="stylesheet" href="/styles/style.css" />
     <link rel="icon" type="image/png" href="/images/tab-icon.png" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <header>
-        
+    <header class="header-home" id="home">
+        <nav class="navbar d-flex">
+            <div class="navbar-logo"><span>{</span>Vipul_<span>}</span></div>
+            <!-- <div class="navbar-icon"><i class="fa fa-bars"></i></div> -->
+            <div>
+                <ul class="navbar-list d-flex">
+                    <li class="navbar-item"><a href="#home">Home</a></li>
+                    <li class="navbar-item"><a href="#about-me">About me</a></li>
+                    <li class="navbar-item"><a href="#projects">Projects</a></li>
+                    <li class="navbar-item"><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
     </header>
+    <!-- <section>
+        <div>Front-End Developer</div>
+        <div>Hi, I am Vipul Gupta, a passionate & skilled front-end developer based in Rajasthan, India.</div>
+        <div><img src="" alt="heroImage"></div>
+    </section> -->
+    <!-- <section>
+        about me
+    </section> -->
+    <!-- <section>
+        Projects done so far
+    </section> -->
+    <!-- contact -->
+    <section id="contact" class="container">
+        <p>CONTACT<p>
+        <div class="d-flex">
+            <span><i class="fa fa-envelope"></i></span>
+            <div>
+                <div>Mail</div>
+                <div>mail.vipulg@gmail.com</div>
+            </div>
+            <span><i class="fa fa-map-marker"></i></span>
+            <div>
+                <div>Location</div>
+                <div>India</div>
+            </div>
+        </div>
+    </section>
+    <!-- contacts ends here -->
+    <!-- footer -->
+    <footer class="footer bg-secondary text-primary">
+        <div class="footer-content d-flex">
+            Copyright &#169; 2023, All rights are reserved 
+        </div>
+    </footer>
+    <!-- footer ends here -->
 </body>
 </html>
