some more changes

--- a/index.html
+++ b/index.html
@@ -24,30 +24,59 @@
             </div>
         </nav>
     </header>
-    <!-- <section>
-        <div>Front-End Developer</div>
-        <div>Hi, I am Vipul Gupta, a passionate & skilled front-end developer based in Rajasthan, India.</div>
-        <div><img src="" alt="heroImage"></div>
-    </section> -->
+    <section class="hero-section container d-flex">
+        <div>
+            <div class="hero-main-heading">Front-End Developer</div>
+            <div>Hi, I am Vipul Gupta, a passionate & skilled front-end developer based in Rajasthan, India.</div>
+        </div>
+        <div><img src="https://cdn1.iconfinder.com/data/icons/facely-metapeople-3d-avatar-set/512/17._Designer.png" alt="heroImage"></div>
+    </section>
     <!-- <section>
         about me
     </section> -->
-    <!-- <section>
-        Projects done so far
-    </section> -->
+    <!-- Project start here -->
+    <section id="projects" class="bg-primary-shade">
+        <div class="container">
+            <div class="projects-text">PROJECTS</div>
+            <div class="project-card-grid d-flex">
+                <div class="project-card">
+                    <img src="/images/airbnb-project1.png" alt="airbnb-clone">
+                    <div class="card-container">
+                    <h4><b>Airbnb Clone</b></h4> 
+                    <p>I have created clone of apartment rental provider website using HTML & CSS</p> 
+                    </div>
+                </div>
+                <div class="project-card">
+                    <img src="/images/food-ordering-project2.png" alt="airbnb-clone">
+                    <div class="card-container">
+                    <h4><b>Food ordering website</b></h4> 
+                    <p>I have created this food ordering landing page website using HTML & CSS</p> 
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- projects end here -->
     <!-- contact -->
     <section id="contact" class="container">
         <p>CONTACT<p>
-        <div class="d-flex">
-            <span><i class="fa fa-envelope"></i></span>
-            <div>
-                <div>Mail</div>
-                <div>mail.vipulg@gmail.com</div>
+        <div class="contact-text">
+            you've a task for me, let's catch up...
+        </div>
+        <div class="d-flex contact">
+            <div class="contact-mail d-flex">
+                <span class="contact-logo d-flex"><i class="fa fa-envelope"></i></span>
+                <div>
+                    <div class="contact-text">Mail</div>
+                    <div>mail.vipulg@gmail.com</div>
+                </div>
             </div>
-            <span><i class="fa fa-map-marker"></i></span>
-            <div>
-                <div>Location</div>
-                <div>India</div>
+            <div class="contact-location d-flex">
+                <span class="contact-logo d-flex"><i class="fa fa-map-marker"></i></span>
+                <div>
+                    <div class="contact-text">Location</div>
+                    <div>India</div>
+                </div>
             </div>
         </div>
     </section>
