--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <!-- https://portfolio-gupta-vipul.vercel.app/ -->
     <header class="header-home">
         <nav class="navbar d-flex">
-            <div class="navbar-logo"><span>{</span>Vipul_<span>}</span></div>
-            <!-- <div class="navbar-icon"><i class="fa fa-bars"></i></div> -->
-            <div>
+            <div class="navbar-logo">Vipul<span>&lt;</span>/<span>&gt;</span></div>
+            <div class="navbar-navigation d-flex">
+                <div class="navbar-icon"><i class="fa fa-bars"></i></div>
                 <ul class="navbar-list d-flex">
                     <li class="navbar-item"><a href="#home">Home</a></li>
                     <li class="navbar-item"><a href="#about-me">About me</a></li>
@@ -93,14 +93,14 @@
             you've a task for me, let's catch up...
         </div>
         <div class="d-flex contact">
-            <div class="contact-mail d-flex">
+            <div class="contact-item d-flex">
                 <span class="contact-logo d-flex"><i class="fa fa-envelope"></i></span>
                 <div>
                     <div class="contact-text">Mail</div>
                     <div>mail.vipulg@gmail.com</div>
                 </div>
             </div>
-            <div class="contact-location d-flex">
+            <div class="contact-item d-flex">
                 <span class="contact-logo d-flex"><i class="fa fa-map-marker"></i></span>
                 <div>
                     <div class="contact-text">Location</div>
