media Queries #hero_section
Made neccessary changes to the hero banner image, give responsivness

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="skills-logo d-flex"><img src="/images/github.png" alt="GITHUB" title="github"></div>
             </div>
         </div>
-        <div><img src="/images/hero-image.png" alt="heroImage"></div>
+        <div class="hero-banner-container"><img class="hero-banner-image" src="/images/hero-image.png" alt="heroImage"></div>
     </section>
     <!-- Hero section ends here -->
     <!-- Anout me section starts here-->
