--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <section id="home" class="hero-section container d-flex">
         <div class="hero-section-text d-flex">
             <div class="hero-main-heading">Front-End Web Developer</div>
-            <div>Hi, I am Vipul Gupta, a passionate & skilled front-end developer based in Rajasthan, India.</div>
-            <div class="skills-text">Skills</div>
+            <div class="hero-description">Hi, I am Vipul Gupta, a passionate & skilled front-end developer based in Rajasthan, India.</div>
+            <div class="hero-skills">Skills</div>
             <div class="hero-section-skills d-flex">
                 <div class="skills-logo d-flex"><img src="/images/html.png" alt="HTML" title="html"></div>
                 <div class="skills-logo d-flex"><img src="/images/css-3.png" alt="CSS" title="css"></div>
@@ -41,19 +41,23 @@
         <div class="hero-banner-container"><img class="hero-banner-image" src="/images/hero-image.png" alt="heroImage"></div>
     </section>
     <!-- Hero section ends here -->
-    <!-- Anout me section starts here-->
-    <!-- <section id="about-me" class="container">
-        <div class="about-me-text">ABOUT ME</div>
+    <!-- About me section starts here-->
+    <section id="about-me" class="container">
+        <p>About me</p>
         <div class="aboutme-card d-flex">
-            <div>something about me</div>
-            <div class="aboutme-card-image"><img src="/images/Developer.png" alt=""></div>
+            <div class="aboutme-card-text">
+                I am a passionate & skilled front-end developer based in Rajasthan,India. I hold various skills like HTML, CSS, Java, JavaScript, I am good at designing responsive websites & maintaining a clean source code. I am also a team player,who collaborate with teams to create a outstanding web applications.
+            </div>
+            <div class="aboutme-card-image">
+                <img src="/images/Developer.png" alt="">
+            </div>
         </div>
-    </section> -->
+    </section>
     <!-- Ends here -->
     <!-- Project start here -->
     <section id="projects" class="bg-primary-shade">
         <div class="container">
-            <div class="projects-text">PROJECTS</div>
+            <p class="project-head">PROJECTS</p>
             <div class="project-card-grid d-flex">
                 <div class="project-card">
                     <a href="https://airbnb-clone.vipulgupta21.repl.co/" target="_blank">
@@ -82,6 +86,15 @@
                     <p>Simple & clean login & Register from using HTML form and required CSS.</p> 
                     </div>
                 </div>
+                <!-- <div class="project-card">
+                    <a href="https://login-pages.vipulgupta21.repl.co/index.html" target="_blank">
+                        <img src="/images/login-register-project3.png" alt="login-register form">
+                    </a>
+                    <div class="card-container">
+                    <h4><b>Login-Register Form</b></h4> 
+                    <p>Simple & clean login & Register from using HTML form and required CSS.</p> 
+                    </div>
+                </div> -->
             </div>
         </div>
     </section>
