Changes in about section
Some minor changes in action tab to make it more responsive

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <link rel="icon" type="image/png" href="/images/tab-icon.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
     <!-- https://portfolio-gupta-vipul.vercel.app/ -->
     <header class="header-home">
@@ -28,7 +30,8 @@
     <section id="home" class="hero-section container d-flex">
         <div class="hero-section-text d-flex">
             <div class="hero-main-heading">Front-End Web Developer</div>
-            <div class="hero-description">Hi, I am Vipul Gupta, a passionate & skilled front-end developer based in Rajasthan, India.</div>
+            <div class="hero-description">Hi, I am Vipul Gupta, a passionate & skilled front-end developer based in
+                Rajasthan, India.</div>
             <div class="hero-skills">Skills</div>
             <div class="hero-section-skills d-flex">
                 <div class="skills-logo d-flex"><img src="/images/html.png" alt="HTML" title="html"></div>
@@ -38,17 +41,20 @@
                 <div class="skills-logo d-flex"><img src="/images/github.png" alt="GITHUB" title="github"></div>
             </div>
         </div>
-        <div class="hero-banner-container"><img class="hero-banner-image" src="/images/hero-image.png" alt="heroImage"></div>
+        <div class="hero-banner-container"><img class="hero-banner-image" src="/images/hero-image.png" alt="heroImage">
+        </div>
     </section>
     <!-- Hero section ends here -->
     <!-- About me section starts here-->
     <section id="about-me" class="container">
-        <p>About me</p>
+        <p>ABOUT ME</p>
         <div class="aboutme-card d-flex">
             <div class="aboutme-card-text">
-                I am a passionate & skilled front-end developer based in Rajasthan,India. I hold various skills like HTML, CSS, Java, JavaScript, I am good at designing responsive websites & maintaining a clean source code. I am also a team player,who collaborate with teams to create a outstanding web applications.
+                I am a passionate & skilled front-end developer based in Rajasthan,India. I hold various skills like
+                HTML, CSS, Java, JavaScript, I am good at designing responsive websites & maintaining a clean source
+                code. I am also a team player,who collaborate with teams to create a outstanding web applications.
             </div>
-            <div class="aboutme-card-image">
+            <div class="aboutme-card-image d-flex">
                 <img src="/images/Developer.png" alt="">
             </div>
         </div>
@@ -64,8 +70,8 @@
                         <img src="/images/airbnb-project1.png" alt="airbnb-clone">
                     </a>
                     <div class="card-container">
-                    <h4><b>Airbnb Clone</b></h4> 
-                    <p>I have created clone of apartment rental provider website using HTML & CSS</p> 
+                        <h4><b>Airbnb Clone</b></h4>
+                        <p>I have created clone of apartment rental provider website using HTML & CSS</p>
                     </div>
                 </div>
                 <div class="project-card">
@@ -73,8 +79,8 @@
                         <img src="/images/food-ordering-project2.png" alt="food-landing-page">
                     </a>
                     <div class="card-container">
-                    <h4><b>Food ordering website</b></h4> 
-                    <p>I have created this food ordering landing page website using HTML & CSS</p> 
+                        <h4><b>Food ordering website</b></h4>
+                        <p>I have created this food ordering landing page website using HTML & CSS</p>
                     </div>
                 </div>
                 <div class="project-card">
@@ -82,8 +88,8 @@
                         <img src="/images/login-register-project3.png" alt="login-register form">
                     </a>
                     <div class="card-container">
-                    <h4><b>Login-Register Form</b></h4> 
-                    <p>Simple & clean login & Register from using HTML form and required CSS.</p> 
+                        <h4><b>Login-Register Form</b></h4>
+                        <p>Simple & clean login & Register from using HTML form and required CSS.</p>
                     </div>
                 </div>
                 <!-- <div class="project-card">
@@ -101,7 +107,8 @@
     <!-- projects end here -->
     <!-- contact -->
     <section id="contact" class="container">
-        <p>CONTACT<p>
+        <p>CONTACT
+        <p>
         <div class="contact-text">
             you've a task for me, let's catch up...
         </div>
@@ -126,9 +133,10 @@
     <!-- footer -->
     <footer class="footer bg-secondary text-primary">
         <div class="footer-content d-flex">
-            Copyright &#169; 2023, All rights are reserved 
+            Copyright &#169; 2023, All rights are reserved
         </div>
     </footer>
     <!-- footer ends here -->
 </body>
+
 </html>
