--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <!-- Project start here -->
     <section id="projects" class="bg-primary-shade">
         <div class="container">
-            <p class="project-head">PROJECTS</p>
+            <p class="project-head">PROJECTS ke saath hi ched chad krta hu</p>
             <div class="project-card-grid d-flex">
                 <div class="project-card">
                     <a href="https://airbnb-clone.vipulgupta21.repl.co/" target="_blank">
