--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
                 <div class="skills-logo d-flex"><img src="/images/java.png" alt="JAVA" title="Java"></div>
                 <div class="skills-logo d-flex"><img src="/images/git.png" alt="GIT" title="git"></div>
                 <div class="skills-logo d-flex"><img src="/images/github.png" alt="GITHUB" title="github"></div>
+                <div class="skills-logo d-flex"><img src="/images/javascript.png" alt="JAVASCRIPT" title="javaScript"></div>
+                <div class="skills-logo d-flex"><img src="/images/react-js.png" alt="REACT" title="react"></div>
             </div>
         </div>
         <div class="hero-banner-container"><img class="hero-banner-image" src="/images/hero-image.png" alt="heroImage">
