--- a/index.html
+++ b/index.html
@@ -52,12 +52,10 @@
         <p>ABOUT ME</p>
         <div class="aboutme-card d-flex">
             <div class="aboutme-card-text">
-                I am a passionate & skilled front-end developer based in Rajasthan,India. I hold various skills like
-                HTML, CSS, Java, JavaScript, I am good at designing responsive websites & maintaining a clean source
-                code. I am also a team player,who collaborate with teams to create a outstanding web applications.
+                I am a dedicated and highly skilled front-end developer based in Rajasthan, India, with a strong foundation in HTML, CSS, and JavaScript, enhanced by expertise in React, Tailwind CSS, and Java. My dedication to clean code, teamwork, and ongoing learning ensures that I can create outstanding web applications that meet the needs of clients and users. Whether it's building responsive interfaces, optimizing user experiences, or contributing to full-stack projects, I am committed to delivering high-quality work in the ever-changing landscape of web development.
             </div>
             <div class="aboutme-card-image d-flex">
-                <img src="/images/Developer.png" alt="">
+                <img src="https://i.pinimg.com/originals/2a/53/65/2a53651a35816f499270d8275fd5318f.gif" alt="">
             </div>
         </div>
     </section>
@@ -65,44 +63,98 @@
     <!-- Project start here -->
     <section id="projects" class="bg-primary-shade">
         <div class="container">
-            <p class="project-head">PROJECTS ke saath hi ched chad krta hu</p>
+            <p class="project-head">PROJECTS</p>
             <div class="project-card-grid d-flex">
                 <div class="project-card">
-                    <a href="https://airbnb-clone.vipulgupta21.repl.co/" target="_blank">
-                        <img src="/images/airbnb-project1.png" alt="airbnb-clone">
+                    <a href="https://e-shope-neon.vercel.app/" target="_blank">
+                        <img src="/images/e-Shope.png" alt="movie-deck">
                     </a>
                     <div class="card-container">
-                        <h4><b>Airbnb Clone</b></h4>
-                        <p>I have created clone of apartment rental provider website using HTML & CSS</p>
+                        <h4><b>e-Shope</b></h4> 
+                        <p>e-Shope is a e-commerce platform that seamlessly integrates APIs for a streamlined shopping experience. With its user-friendly interface, customers can easily browse and add products to their cart, providing a hassle-free online shopping journey.</p> 
+                    </div>
+                    <div class="card-overlay">
+                        <h2>Tech Stack</h2>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                            <li>React</li>
+                            <li>Tailwind CSS</li>
+                        </ul>
+                        <h2>Links</h2>
+                        <ul>
+                            <li>Hosted Project: <a href="https://e-shope-neon.vercel.app/" target="_blank">Click Here</a></li>
+                            <li>Code: <a href="https://github.com/gupta-vipul/e-Shope" target="_blank">Click Here</a></li>
+                        </ul>
                     </div>
                 </div>
                 <div class="project-card">
-                    <a href="https://gupta-vipul.github.io/static-web-project-0/" target="_blank">
-                        <img src="/images/food-ordering-project2.png" alt="food-landing-page">
+                    <a href="https://movie-deck-project-buidling-js-project-building-ses-gupta-vipul.vercel.app/" target="_blank">
+                        <img src="/images/movie-deck.png" alt="movie-deck">
                     </a>
                     <div class="card-container">
-                        <h4><b>Food ordering website</b></h4>
-                        <p>I have created this food ordering landing page website using HTML & CSS</p>
+                        <h4><b>Movie Deck</b></h4> 
+                        <p>The Movie Display Project is a web application designed to provide users with an interactive and user-friendly platform to explore a vast collection of movies sourced from an external API.</p> 
+                    </div>
+                    <div class="card-overlay">
+                        <h2>Tech Stack</h2>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                        </ul>
+                        <h2>Links</h2>
+                        <ul>
+                            <li>Hosted Project: <a href="https://movie-deck-project-buidling-js-project-building-ses-gupta-vipul.vercel.app/" target="_blank">Click Here</a></li>
+                            <li>Code: <a href="https://github.com/gupta-vipul/Movie-Deck-Project-Buidling---JS-Project-Building-Session-HTML-CSS---In-Cla---aivn7q0cua9q" target="_blank">Click Here</a></li>
+                        </ul>
                     </div>
                 </div>
                 <div class="project-card">
-                    <a href="https://login-pages.vipulgupta21.repl.co/index.html" target="_blank">
-                        <img src="/images/login-register-project3.png" alt="login-register form">
+                    <a href="https://isro-centre-gupta-vipul.vercel.app/" target="_blank">
+                        <img src="/images/isro-center.png" alt="ISRO-Center">
                     </a>
                     <div class="card-container">
-                        <h4><b>Login-Register Form</b></h4>
-                        <p>Simple & clean login & Register from using HTML form and required CSS.</p>
+                        <h4><b>ISRO Centers</b></h4> 
+                        <p>The ISRO Center Locator Website is a valuable online resource that provides users with a convenient and efficient way to access information about the various centers and observatories operated by the Indian Space Research Organization (ISRO) across different cities and states.</p> 
+                    </div>
+                    <div class="card-overlay">
+                        <h2>Tech Stack</h2>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                        </ul>
+                        <h2>Links</h2>
+                        <ul>
+                            <li>Hosted Project: <a href="https://isro-centre-gupta-vipul.vercel.app/" target="_blank">Click Here</a></li>
+                            <li>Code: <a href="https://github.com/gupta-vipul/ISRO-centres---Javascript-Project---nksffto4nn1u" target="_blank">Click Here</a></li>
+                        </ul>
                     </div>
                 </div>
-                <!-- <div class="project-card">
-                    <a href="https://login-pages.vipulgupta21.repl.co/index.html" target="_blank">
-                        <img src="/images/login-register-project3.png" alt="login-register form">
+                <div class="project-card">
+                    <a href="https://gupta-vipul.github.io/dice-game/" target="_blank">
+                        <img src="/images/dice-game.png" alt="dice-game">
                     </a>
                     <div class="card-container">
-                    <h4><b>Login-Register Form</b></h4> 
-                    <p>Simple & clean login & Register from using HTML form and required CSS.</p> 
+                        <h4><b>Dice Game</b></h4> 
+                        <p>The Dice Game is a straight forward gaming project that offers users a fun and challenging experience. In this game, players get to test their luck and decision-making skills as they attempt to match their chosen number with the randomly generated number on the dice.</p> 
                     </div>
-                </div> -->
+                    <div class="card-overlay">
+                        <h2>Tech Stack</h2>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                        </ul>
+                        <h2>Links</h2>
+                        <ul>
+                            <li>Hosted Project: <a href="https://gupta-vipul.github.io/dice-game/" target="_blank">Click Here</a></li>
+                            <li>Code: <a href="https://github.com/gupta-vipul/dice-game" target="_blank">Click Here</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
