Added new project

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 </head>
 
 <body>
-    <!-- https://portfolio-gupta-vipul.vercel.app/ -->
     <header class="header-home">
         <nav class="navbar d-flex">
             <div class="navbar-logo">Vipul<span>&lt;</span>/<span>&gt;</span></div>
@@ -39,7 +38,8 @@
                 <div class="skills-logo d-flex"><img src="/images/java.png" alt="JAVA" title="Java"></div>
                 <div class="skills-logo d-flex"><img src="/images/git.png" alt="GIT" title="git"></div>
                 <div class="skills-logo d-flex"><img src="/images/github.png" alt="GITHUB" title="github"></div>
-                <div class="skills-logo d-flex"><img src="/images/javascript.png" alt="JAVASCRIPT" title="javaScript"></div>
+                <div class="skills-logo d-flex"><img src="/images/javascript.png" alt="JAVASCRIPT" title="javaScript">
+                </div>
                 <div class="skills-logo d-flex"><img src="/images/react-js.png" alt="REACT" title="react"></div>
             </div>
         </div>
@@ -52,7 +52,12 @@
         <p>ABOUT ME</p>
         <div class="aboutme-card d-flex">
             <div class="aboutme-card-text">
-                I am a dedicated and highly skilled front-end developer based in Rajasthan, India, with a strong foundation in HTML, CSS, and JavaScript, enhanced by expertise in React, Tailwind CSS, and Java. My dedication to clean code, teamwork, and ongoing learning ensures that I can create outstanding web applications that meet the needs of clients and users. Whether it's building responsive interfaces, optimizing user experiences, or contributing to full-stack projects, I am committed to delivering high-quality work in the ever-changing landscape of web development.
+                I am a dedicated and highly skilled front-end developer based in Rajasthan, India, with a strong
+                foundation in HTML, CSS, and JavaScript, enhanced by expertise in React, Tailwind CSS, and Java. My
+                dedication to clean code, teamwork, and ongoing learning ensures that I can create outstanding web
+                applications that meet the needs of clients and users. Whether it's building responsive interfaces,
+                optimizing user experiences, or contributing to full-stack projects, I am committed to delivering
+                high-quality work in the ever-changing landscape of web development.
             </div>
             <div class="aboutme-card-image d-flex">
                 <img src="https://i.pinimg.com/originals/2a/53/65/2a53651a35816f499270d8275fd5318f.gif" alt="">
@@ -67,11 +72,41 @@
             <div class="project-card-grid d-flex">
                 <div class="project-card">
                     <a href="https://e-shope-neon.vercel.app/" target="_blank">
+                        <img src="images\homepage-logged-in.png" alt="movie-deck">
+                    </a>
+                    <div class="card-container">
+                        <h4><b>Reliance Digital Clone</b></h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia vitae repellat minus nobis
+                            voluptatem accusantium sapiente hic quae assumenda consectetur.</p>
+                    </div>
+                    <div class="card-overlay">
+                        <h2>Tech Stack</h2>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                            <li>React</li>
+                        </ul>
+                        <h2>Links</h2>
+                        <ul>
+                            <li>Hosted Project: <a href="https://reliancedigitalrd.vercel.app/" target="_blank">Click
+                                    Here</a></li>
+                            <li>Code: <a
+                                    href="https://github.com/gupta-vipul/Reliance-Electronics-Clone---React-Project-1---kbtsbbfdoig1"
+                                    target="_blank">Click Here</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <a href="https://e-shope-neon.vercel.app/" target="_blank">
                         <img src="/images/e-Shope.png" alt="movie-deck">
                     </a>
                     <div class="card-container">
-                        <h4><b>e-Shope</b></h4> 
-                        <p>e-Shope is a e-commerce platform that seamlessly integrates APIs for a streamlined shopping experience. With its user-friendly interface, customers can easily browse and add products to their cart, providing a hassle-free online shopping journey.</p> 
+                        <h4><b>e-Shope</b></h4>
+                        <p>e-Shope is a e-commerce platform that seamlessly integrates APIs for a streamlined shopping
+                            experience. With its user-friendly interface, customers can easily browse and add products
+                            to their cart, providing a hassle-free online shopping journey.</p>
                     </div>
                     <div class="card-overlay">
                         <h2>Tech Stack</h2>
@@ -84,18 +119,23 @@
                         </ul>
                         <h2>Links</h2>
                         <ul>
-                            <li>Hosted Project: <a href="https://e-shope-neon.vercel.app/" target="_blank">Click Here</a></li>
-                            <li>Code: <a href="https://github.com/gupta-vipul/e-Shope" target="_blank">Click Here</a></li>
+                            <li>Hosted Project: <a href="https://e-shope-neon.vercel.app/" target="_blank">Click
+                                    Here</a></li>
+                            <li>Code: <a href="https://github.com/gupta-vipul/e-Shope" target="_blank">Click Here</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
                 <div class="project-card">
-                    <a href="https://movie-deck-project-buidling-js-project-building-ses-gupta-vipul.vercel.app/" target="_blank">
+                    <a href="https://movie-deck-project-buidling-js-project-building-ses-gupta-vipul.vercel.app/"
+                        target="_blank">
                         <img src="/images/movie-deck.png" alt="movie-deck">
                     </a>
                     <div class="card-container">
-                        <h4><b>Movie Deck</b></h4> 
-                        <p>The Movie Display Project is a web application designed to provide users with an interactive and user-friendly platform to explore a vast collection of movies sourced from an external API.</p> 
+                        <h4><b>Movie Deck</b></h4>
+                        <p>The Movie Display Project is a web application designed to provide users with an interactive
+                            and user-friendly platform to explore a vast collection of movies sourced from an external
+                            API.</p>
                     </div>
                     <div class="card-overlay">
                         <h2>Tech Stack</h2>
@@ -106,8 +146,12 @@
                         </ul>
                         <h2>Links</h2>
                         <ul>
-                            <li>Hosted Project: <a href="https://movie-deck-project-buidling-js-project-building-ses-gupta-vipul.vercel.app/" target="_blank">Click Here</a></li>
-                            <li>Code: <a href="https://github.com/gupta-vipul/Movie-Deck-Project-Buidling---JS-Project-Building-Session-HTML-CSS---In-Cla---aivn7q0cua9q" target="_blank">Click Here</a></li>
+                            <li>Hosted Project: <a
+                                    href="https://movie-deck-project-buidling-js-project-building-ses-gupta-vipul.vercel.app/"
+                                    target="_blank">Click Here</a></li>
+                            <li>Code: <a
+                                    href="https://github.com/gupta-vipul/Movie-Deck-Project-Buidling---JS-Project-Building-Session-HTML-CSS---In-Cla---aivn7q0cua9q"
+                                    target="_blank">Click Here</a></li>
                         </ul>
                     </div>
                 </div>
@@ -116,8 +160,11 @@
                         <img src="/images/isro-center.png" alt="ISRO-Center">
                     </a>
                     <div class="card-container">
-                        <h4><b>ISRO Centers</b></h4> 
-                        <p>The ISRO Center Locator Website is a valuable online resource that provides users with a convenient and efficient way to access information about the various centers and observatories operated by the Indian Space Research Organization (ISRO) across different cities and states.</p> 
+                        <h4><b>ISRO Centers</b></h4>
+                        <p>The ISRO Center Locator Website is a valuable online resource that provides users with a
+                            convenient and efficient way to access information about the various centers and
+                            observatories operated by the Indian Space Research Organization (ISRO) across different
+                            cities and states.</p>
                     </div>
                     <div class="card-overlay">
                         <h2>Tech Stack</h2>
@@ -128,8 +175,11 @@
                         </ul>
                         <h2>Links</h2>
                         <ul>
-                            <li>Hosted Project: <a href="https://isro-centre-gupta-vipul.vercel.app/" target="_blank">Click Here</a></li>
-                            <li>Code: <a href="https://github.com/gupta-vipul/ISRO-centres---Javascript-Project---nksffto4nn1u" target="_blank">Click Here</a></li>
+                            <li>Hosted Project: <a href="https://isro-centre-gupta-vipul.vercel.app/"
+                                    target="_blank">Click Here</a></li>
+                            <li>Code: <a
+                                    href="https://github.com/gupta-vipul/ISRO-centres---Javascript-Project---nksffto4nn1u"
+                                    target="_blank">Click Here</a></li>
                         </ul>
                     </div>
                 </div>
@@ -138,8 +188,10 @@
                         <img src="/images/dice-game.png" alt="dice-game">
                     </a>
                     <div class="card-container">
-                        <h4><b>Dice Game</b></h4> 
-                        <p>The Dice Game is a straight forward gaming project that offers users a fun and challenging experience. In this game, players get to test their luck and decision-making skills as they attempt to match their chosen number with the randomly generated number on the dice.</p> 
+                        <h4><b>Dice Game</b></h4>
+                        <p>The Dice Game is a straight forward gaming project that offers users a fun and challenging
+                            experience. In this game, players get to test their luck and decision-making skills as they
+                            attempt to match their chosen number with the randomly generated number on the dice.</p>
                     </div>
                     <div class="card-overlay">
                         <h2>Tech Stack</h2>
@@ -150,8 +202,10 @@
                         </ul>
                         <h2>Links</h2>
                         <ul>
-                            <li>Hosted Project: <a href="https://gupta-vipul.github.io/dice-game/" target="_blank">Click Here</a></li>
-                            <li>Code: <a href="https://github.com/gupta-vipul/dice-game" target="_blank">Click Here</a></li>
+                            <li>Hosted Project: <a href="https://gupta-vipul.github.io/dice-game/" target="_blank">Click
+                                    Here</a></li>
+                            <li>Code: <a href="https://github.com/gupta-vipul/dice-game" target="_blank">Click Here</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
