Adding new project desc

--- a/index.html
+++ b/index.html
@@ -70,8 +70,28 @@
                         <img src="/images/airbnb-project1.png" alt="airbnb-clone">
                     </a>
                     <div class="card-container">
-                        <h4><b>Airbnb Clone</b></h4>
-                        <p>I have created clone of apartment rental provider website using HTML & CSS</p>
+                        <h4><b>Reliance Digital Clone</b></h4>
+                        <p>Reliance Digital Clone is an innovative project that introduces a cutting-edge online
+                            shopping experience. The platform boasts a user-friendly homepage that serves as a central
+                            hub, providing seamless access to the entire website.</p>
+                    </div>
+                    <div class="card-overlay">
+                        <h2>Tech Stack</h2>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                            <li>React</li>
+                        </ul>
+                        <h2>Links</h2>
+                        <ul>
+                            <li>Hosted Project: <a href="https://reliancedigitalrd.vercel.app/" target="_blank">Click
+                                    Here</a></li>
+                            <li>Code: <a
+                                    href="https://github.com/gupta-vipul/Reliance-Electronics-Clone---React-Project-1---kbtsbbfdoig1"
+                                    target="_blank">Click Here</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
                 <div class="project-card">
