--- a/index.html
+++ b/index.html
@@ -120,18 +120,15 @@
                         </ul>
                         <h2>Links</h2>
                         <ul>
-                            <li>Hosted Project: <a href="https://reliancedigitalrd.vercel.app/" target="_blank">Click
+                            <li>Hosted Project: <a href="https://e-shope-neon.vercel.app/" target="_blank">Click
                                     Here</a></li>
-                            <li>Code: <a
-                                    href="https://github.com/gupta-vipul/Reliance-Electronics-Clone---React-Project-1---kbtsbbfdoig1"
-                                    target="_blank">Click Here</a>
+                            <li>Code: <a href="https://github.com/gupta-vipul/e-Shope" target="_blank">Click Here</a>
                             </li>
                         </ul>
                     </div>
                 </div>
                 <div class="project-card">
-                    <a href="https://movie-deck-project-buidling-js-project-building-ses-gupta-vipul.vercel.app/"
-                        target="_blank">
+                    <a href="https://movie-deck-gupta-vipul.vercel.app/" target="_blank">
                         <img src="/images/movie-deck.png" alt="movie-deck">
                     </a>
                     <div class="card-container">
@@ -149,8 +146,7 @@
                         </ul>
                         <h2>Links</h2>
                         <ul>
-                            <li>Hosted Project: <a
-                                    href="https://movie-deck-project-buidling-js-project-building-ses-gupta-vipul.vercel.app/"
+                            <li>Hosted Project: <a href="https://movie-deck-gupta-vipul.vercel.app/"
                                     target="_blank">Click Here</a></li>
                             <li>Code: <a
                                     href="https://github.com/gupta-vipul/Movie-Deck-Project-Buidling---JS-Project-Building-Session-HTML-CSS---In-Cla---aivn7q0cua9q"
